--- a/templates/static.html
+++ b/templates/static.html
@@ -18,7 +18,7 @@
     <table>
         <tr>
             <td>资源名称</td>
-            <td>资源大小</td>
+            <td>资源大小(kb)</td>
             <td>创建时间</td>
             <td>更新时间</td>
         </tr>
